2016-11-19 Massimo Manghi <mxmanghi@apache.org>
    * src/mod-rivet/rivetInspect.c: now returning
    an empty string if a value is undefined
    * configure.ac: now defaults to non automatic
    import of ::rivet namespace into global namespace

2016-11-17 Massimo Manghi <mxmanghi@apache.org>
    * rivet/packages/dio/dio_Postgresql.tcl: applied
    consistent single quote character handling by
    calling PgTcl function pg_quote (closes bug #60378)
    * rivet/packages/formbroker/formbroker.tcl: fixed
    bug in method response. Package version number
    bumped up to 1.0
    * doc/xml/formbroker.xml: first draft of the
    manual page of package formbroker with example
    of implementation of a validator
    * doc/xml/commands.xml: fixed type in page
    of ::rivet::xml

2016-11-15 Massimo Manghi <mxmanghi@apache.org>
    * rivet/init.tcl.in: trimming error buffer
    to make test message matching easier
    * rivet/rivet-tcl/catch.tcl|try.tcl: better
    script evaluation is catch/try construct, complete
    error codes in case ::rivet::abort_page is to be
    handled
    * src/mod_rivet_ng/rivetCore.c: direct
    result object handling in [::rivet::inspect script]
    * try.rvt: changed test expression matching

2016-11-12 Massimo Manghi <mxmanghi@apache.org>
    * rivet/init.tcl.in: removed debugging messages,
    request handling made much simpler after
    ::rivet::inspect changed its behavior when
    a script is undefined
    * src/mod_rivet_ng/rivetInspect.c: changed 
    to an empty string the value returned when
    a configuration script is undefined
    * src/mod_rivet_ng/mod_rivet_common.c: we don't
    need to handle at C level the error handler
    and the request cleanup Tcl scritps: they are
    called from Tcl
    * src/mod_rivet_ng/mod_rivet_generator.c: removed
    code unused by this version of the module

2016-11-11 Massimo Manghi <mxmanghi@apache.org>
    * rivet/init.tcl.it: further development of the